--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-inner container">
             <a href="index.html" class="logo">WALZ<span>SHOP</span></a>
             <nav class="nav">
-                <a href="#" class="nav-item active">Beranda</a>
+                <a href="index.html" class="nav-item active">Beranda</a>
                 <a href="#" class="nav-item">Top Up</a>
                 <a href="#" class="nav-item">Diamond</a>
                 <a href="#" class="nav-item">Promo</a>
@@ -38,17 +38,22 @@
             <div class="card cta-box">
                 <h3>Selamat Datang di Walz Shop!</h3>
                 <p>Tempat top up game termurah, tercepat, dan terpercaya. Layanan 24 jam dengan berbagai pilihan pembayaran.</p>
-                <a href="#" class="btn">Top Up Sekarang</a>
+                <a href="#" class="btn btn-secondary">Top Up Sekarang</a>
             </div>
-            
+
             <div class="card">
                 <h2>Pilihan Game</h2>
                 <div class="games-grid" id="games-grid">
                     </div>
             </div>
         </section>
-
     </main>
+    
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Walz Shop. Semua hak cipta dilindungi.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
