--- a/game.html
+++ b/game.html
@@ -69,7 +69,7 @@
                 <button class="btn btn-secondary" id="voucher-btn">Terapkan</button>
             </div>
             <p class="status-text" id="voucher-status"></p>
-            <button class="btn btn-ghost mt-2" id="voucher-list-btn">Lihat Kode Voucher</button>
+            <button class="btn btn-ghost" id="voucher-list-btn">Lihat Kode Voucher</button>
         </div>
 
         <div class="card summary-card">
@@ -86,12 +86,18 @@
     </main>
 
     <div id="modal-overlay"></div>
-    
+
     <div class="modal" id="voucher-list-modal">
         </div>
-    
+
     <div class="modal" id="checkout-modal">
         </div>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Walz Shop. Semua hak cipta dilindungi.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
