--- a/game.html
+++ b/game.html
@@ -31,6 +31,8 @@
     <main class="main-content">
         <div class="container game-page">
 
+            <a href="index.html" class="back-btn"><i class="fa-solid fa-chevron-left"></i> Kembali</a>
+
             <div class="game-header">
                 <img id="game-banner" src="" alt="Game Banner">
             </div>
