--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body data-page="index">
 
+    <!-- Navbar -->
     <header class="navbar">
         <div class="container">
-            <a href="/" class="logo">
+            <a href="index.html" class="logo">
                 <img src="https://files.catbox.moe/k28lxp.jpg" alt="Logo">
                 Walz Shop
             </a>
@@ -28,8 +29,11 @@
         </div>
     </header>
 
+    <!-- Main Content -->
     <main class="main-content">
         <div class="container">
+
+            <!-- Slider Promo -->
             <section class="section">
                 <div class="slider-container">
                     <div class="slider-track" id="promo-slider"></div>
@@ -37,16 +41,18 @@
                 </div>
             </section>
 
+            <!-- Pilihan Game -->
             <section class="section">
                 <div class="section-head">
                     <h2>Pilihan Game</h2>
                 </div>
-                <div class="games-grid" id="games-grid">
-                    </div>
+                <div class="games-grid" id="games-grid"></div>
             </section>
+
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Walz Shop. All rights reserved.</p>
@@ -58,6 +64,7 @@
         </div>
     </footer>
 
+    <!-- Modal -->
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal" id="voucher-list-modal"></div>
     <div class="modal" id="checkout-modal"></div>
