--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main-content" id="main-content">
         <div class="container">
             <section class="section">
                 <div class="slider-container">
@@ -42,7 +42,7 @@
                     <h2>Pilihan Game</h2>
                 </div>
                 <div class="games-grid" id="games-grid">
-                    </div>
+                </div>
             </section>
         </div>
     </main>
