--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main-content" id="main-content">
         <div class="container game-page">
 
             <a href="index.html" class="back-btn"><i class="fa-solid fa-chevron-left"></i> Kembali</a>
@@ -64,7 +64,7 @@
                             <h3>Pilih Nominal Top Up</h3>
                         </div>
                         <div class="grid" id="product-grid">
-                            </div>
+                        </div>
                         <small class="error-msg" id="error-product"></small>
                     </section>
     
@@ -89,7 +89,7 @@
                             <h3>Pilih Metode Pembayaran</h3>
                         </div>
                         <div class="grid" id="payment-grid">
-                            </div>
+                        </div>
                         <small class="error-msg" id="error-payment"></small>
                     </section>
                 </div>
