--- a/game.html
+++ b/game.html
@@ -6,6 +6,9 @@
     <title>Top Up Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body data-page="game">
 
@@ -28,7 +31,7 @@
         </div>
     </header>
 
-    <main class="main-content" id="main-content">
+    <main class="main-content">
         <div class="container game-page">
 
             <a href="index.html" class="back-btn"><i class="fa-solid fa-chevron-left"></i> Kembali</a>
