--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html" class="active">Beranda</a></li>
-                    <li><a href="#">Cara Top Up</a></li>
-                    <li><a href="#">Kontak</a></li>
+                    <li><a href="#cara-topup">Cara Top Up</a></li>
+                    <li><a href="#kontak">Kontak</a></li>
                 </ul>
             </nav>
             <div class="nav-toggle">
@@ -38,6 +38,29 @@
                 <h2>Pilih Game</h2>
                 <div class="games-grid" id="games-grid">
                     </div>
+            </section>
+            
+            <section id="cara-topup" class="info-section">
+                <h2>Cara Top Up</h2>
+                <ol>
+                    <li>Pilih game yang ingin kamu top up di halaman beranda.</li>
+                    <li>Masukkan User ID dan Server ID (jika diperlukan) dengan benar.</li>
+                    <li>Pilih nominal top up yang kamu inginkan.</li>
+                    <li>Pilih metode pembayaran yang tersedia.</li>
+                    <li>Masukkan kode voucher (jika ada) untuk mendapatkan diskon.</li>
+                    <li>Klik "Beli Sekarang" untuk melihat detail pesanan.</li>
+                    <li>Lakukan pembayaran dan kirim bukti transfer ke Admin via WhatsApp.</li>
+                    <li>Top up akan segera diproses oleh Admin.</li>
+                </ol>
+            </section>
+            
+            <section id="kontak" class="info-section">
+                <h2>Kontak Kami</h2>
+                <p>Jika Anda memiliki pertanyaan atau butuh bantuan, hubungi kami melalui:</p>
+                <ul>
+                    <li><i class="fa-brands fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/6282298902274">6282298902274</a></li>
+                    <li><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:walzlonely@gmail.com">walzlonely@gmail.com</a></li>
+                </ul>
             </section>
         </div>
     </main>
