--- a/game.html
+++ b/game.html
@@ -15,8 +15,8 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Beranda</a></li>
-                    <li><a href="#">Cara Top Up</a></li>
-                    <li><a href="#">Kontak</a></li>
+                    <li><a href="index.html#cara-topup">Cara Top Up</a></li>
+                    <li><a href="index.html#kontak">Kontak</a></li>
                 </ul>
             </nav>
             <div class="nav-toggle">
@@ -27,6 +27,10 @@
 
     <main class="main-content">
         <div class="container game-page">
+            <a href="index.html" class="btn btn-secondary btn-back">
+                <i class="fa-solid fa-arrow-left"></i> Kembali
+            </a>
+            
             <div class="game-header">
                 <img id="game-banner" src="" alt="Game Banner">
             </div>
