--- a/index.html
+++ b/index.html
@@ -43,24 +43,22 @@
             <section id="cara-topup" class="info-section">
                 <h2>Cara Top Up</h2>
                 <ol>
-                    <li>Pilih game yang ingin kamu top up di halaman beranda.</li>
-                    <li>Masukkan User ID dan Server ID (jika diperlukan) dengan benar.</li>
-                    <li>Pilih nominal top up yang kamu inginkan.</li>
-                    <li>Pilih metode pembayaran yang tersedia.</li>
-                    <li>Masukkan kode voucher (jika ada) untuk mendapatkan diskon.</li>
-                    <li>Klik "Beli Sekarang" untuk melihat detail pesanan.</li>
-                    <li>Lakukan pembayaran dan kirim bukti transfer ke Admin via WhatsApp.</li>
-                    <li>Top up akan segera diproses oleh Admin.</li>
+                    <li>Pilih game di halaman utama.</li>
+                    <li>Masukkan ID & Server (jika perlu).</li>
+                    <li>Pilih nominal dan metode pembayaran.</li>
+                    <li>Klik "Beli Sekarang".</li>
+                    <li>Lakukan pembayaran & konfirmasi ke Admin.</li>
                 </ol>
             </section>
             
             <section id="kontak" class="info-section">
                 <h2>Kontak Kami</h2>
-                <p>Jika Anda memiliki pertanyaan atau butuh bantuan, hubungi kami melalui:</p>
-                <ul>
-                    <li><i class="fa-brands fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/6282298902274">6282298902274</a></li>
-                    <li><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:walzlonely@gmail.com">walzlonely@gmail.com</a></li>
-                </ul>
+                <div class="contact-card">
+                    <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran.</p>
+                    <a href="https://wa.me/6282298902274" class="btn btn-primary" target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
+                    </a>
+                </div>
             </section>
         </div>
     </main>
