--- a/game.html
+++ b/game.html
@@ -72,7 +72,9 @@
                                 <button id="voucher-btn" class="btn btn-secondary">Terapkan</button>
                             </div>
                             <p class="status-text" id="voucher-status"></p>
-                            <button id="voucher-list-btn" class="btn-link">Lihat Kode Voucher</button>
+                            <button id="voucher-list-btn" class="btn btn-card">
+                                Lihat Voucher
+                            </button>
                         </div>
                     </section>
                 </div>
