--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
                 <h2>Kontak Kami</h2>
                 <div class="contact-card">
                     <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran.</p>
-                    <a href="https://wa.me/6282298902274" class="btn btn-primary" target="_blank">
-                        <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
-                    </a>
+                    <div class="contact-buttons">
+                        <a href="https://wa.me/6282298902274" class="btn btn-whatsapp" target="_blank">
+                            <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
+                        </a>
+                        <a href="mailto:walzlonely@gmail.com" class="btn btn-gmail" target="_blank">
+                            <i class="fa-solid fa-envelope"></i> Email
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
