--- a/index.html
+++ b/index.html
@@ -9,57 +9,54 @@
 </head>
 <body data-page="index">
 
-    <header class="header">
-        <div class="container navbar">
-            <a href="index.html" class="logo">Walz Shop</a>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html" class="active">Beranda</a></li>
-                    <li><a href="#cara-topup">Cara Top Up</a></li>
-                    <li><a href="#kontak">Kontak</a></li>
-                </ul>
-            </nav>
-            <div class="nav-toggle">
-                <i class="fa-solid fa-bars"></i>
+    <header class="ws-header">
+        <div class="ws-header-row">
+            <h1>Walz Shop</h1>
             </div>
-        </div>
     </header>
 
-    <main class="main-content">
-        <div class="container">
-            <div class="promo-section">
+    <main>
+        <div class="hero">
+            <h2>Walz Shop</h2>
+            <p>Solusi top up game tercepat, termurah, dan terpercaya!</p>
+        </div>
+
+        <div class="main-content">
+            <section class="section promo-section">
                 <div class="slider-container">
                     <div id="promo-slider" class="slider-track"></div>
                     <div class="slider-dots" id="slider-dots"></div>
                 </div>
-            </div>
+            </section>
 
-            <section class="game-list-section">
+            <section class="section game-list-section">
                 <h2>Pilih Game</h2>
-                <div class="games-grid" id="games-grid">
+                <div class="game-grid" id="games-grid">
                     </div>
             </section>
-            
-            <section id="cara-topup" class="info-section">
+
+            <section class="section info-section" id="cara-topup">
                 <h2>Cara Top Up</h2>
-                <ol>
-                    <li>Pilih game di halaman utama.</li>
-                    <li>Masukkan ID & Server (jika perlu).</li>
-                    <li>Pilih nominal dan metode pembayaran.</li>
-                    <li>Klik "Beli Sekarang".</li>
-                    <li>Lakukan pembayaran & konfirmasi ke Admin.</li>
-                </ol>
+                <div class="card">
+                    <ol>
+                        <li>Pilih game favorit Anda di halaman utama.</li>
+                        <li>Masukkan User ID dan Server ID (jika diperlukan).</li>
+                        <li>Pilih nominal top up dan metode pembayaran yang Anda inginkan.</li>
+                        <li>Klik "Beli Sekarang" dan lakukan pembayaran.</li>
+                        <li>Setelah membayar, konfirmasi ke Admin untuk diproses.</li>
+                    </ol>
+                </div>
             </section>
-            
-            <section id="kontak" class="info-section">
+
+            <section class="section info-section" id="kontak">
                 <h2>Kontak Kami</h2>
-                <div class="contact-card">
-                    <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran.</p>
+                <div class="card contact-card">
+                    <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran Anda.</p>
                     <div class="contact-buttons">
-                        <a href="https://wa.me/6282298902274" class="btn btn-whatsapp" target="_blank">
+                        <a href="https://wa.me/6282298902274" class="btn btn-primary" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
                         </a>
-                        <a href="mailto:walzlonely@gmail.com" class="btn btn-gmail" target="_blank">
+                        <a href="mailto:walzlonely@gmail.com" class="btn btn-secondary" target="_blank">
                             <i class="fa-solid fa-envelope"></i> Email
                         </a>
                     </div>
