--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="ws-header">
         <div class="ws-header-row">
             <h1>Walz Shop</h1>
-            </div>
+        </div>
     </header>
 
     <main>
@@ -31,8 +31,7 @@
 
             <section class="section game-list-section">
                 <h2>Pilih Game</h2>
-                <div class="game-grid" id="games-grid">
-                    </div>
+                <div class="game-grid" id="games-grid"></div>
             </section>
 
             <section class="section info-section" id="cara-topup">
