--- a/game.html
+++ b/game.html
@@ -41,14 +41,12 @@
 
                 <section class="form-section">
                     <h3>Langkah 2: Pilih Nominal</h3>
-                    <div class="product-grid" id="product-grid">
-                        </div>
+                    <div class="product-grid" id="product-grid"></div>
                 </section>
 
                 <section class="form-section">
                     <h3>Langkah 3: Pilih Pembayaran</h3>
-                    <div class="payment-grid" id="payment-grid">
-                        </div>
+                    <div class="payment-grid" id="payment-grid"></div>
                 </section>
                 
                 <section class="form-section">
